# smart-playlist-generator

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_v3.2.md  CHANGELOG_v3.3.md  CLAUDE.md  CLEANUP_BASELINE_STATUS.txt  CLEANUP_PLAN.md  CODE_CLEANUP_AND_OPTIMIZATION.md  DEPLOYMENT_COMPLETE.md  DEV.md  DIALS_IMPLEMENTATION_VERIFICATION.md  DIAL_INVESTIGATION_EXECUTIVE_SUMMARY.txt  DOCUMENTATION_AUDIT_SUMMARY.md  GENRE_ENFORCEMENT_QUICK_START.md  GENRE_SYSTEM_COMPLETE_SUMMARY.md  IMPLEMENTATION_CHANGES_REFERENCE.txt  LICENSE  POST_SCAN_COMMANDS.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_DIALS_VERIFICATION.txt  README.md  README_SONIC_FIX.md  RELEASING.md  REPOSITORY_STRUCTURE.md  SONIC_ANALYSIS_SESSION_REPORT.md  SONIC_FEATURE_REDESIGN_PLAN.md  SONIC_FILTERING_IMPLEMENTATION_PLAN.md  SONIC_FILTERING_PROPOSAL.md  SONIC_FIX_COMPLETION_SUMMARY.md  SONIC_FIX_DEPLOYMENT_READINESS.md  SONIC_FIX_IMPLEMENTATION_GUIDE.md  SONIC_IMPROVEMENT_ROADMAP.md  config.example.yaml  config.yaml  discogs_misses.tsv  main_app.py  pyproject.toml  (+2 more)
.claude/: settings.json
api/: __init__.py  __main__.py  main.py  test_api.py
archive/: README.md
data/: artist_aliases.yaml  genre_similarity.yaml  genre_similarity_graph.yaml  genre_vocabulary.yaml  layered_genre_smoke_fixtures.yaml  layered_genre_taxonomy.yaml  mert_calibration_seeds_diverse.txt
diagnostics/: AB_PLAYLIST_6b66f5d1ad891679d05bfc2231838ea5_20251215_215946.md  AB_PLAYLIST_8c5c22941e4739b5a15adf0615d4132e_20251215_215246.md  AB_PLAYLIST_a4e26b017074a8105bb770c91666147c_20251215_220856.md  AB_PLAYLIST_e0046c90fd6e82ce9f66899bc51c0a41_20251215_224226.md  AB_SONIC_VARIANT_REPORT.md  GENRE_COVERAGE_AUDIT.md  SONIC_DIAGNOSTICS_REPORT.md  SONIC_FEATURE_SCHEMA_REPORT.md  SONIC_SEPARABILITY_REPORT.md  ab_sonic_variant_compare.csv  ab_sonic_variant_raw.csv  ab_sonic_variant_whiten_pca.csv  ab_sonic_variant_z.csv  ab_sonic_variant_z_clip.csv  audit_genre_coverage.py  collab_artists_without_genres_top200.csv  genre_coverage_by_artist_type.csv  genre_coverage_summary.csv  my_pairs.csv  my_pairs.json  pairs_punk_ambient.csv  pairs_punk_ambient.json  sonic_blocks.json  sonic_diag_seed1_centered.json  sonic_diag_seed4.json  sonic_diag_seed4_centered.json  sonic_diag_seed6.json  sonic_diag_seed6_centered.json  sonic_dim_dominance_20251215T165317.json  sonic_dim_dominance_20251215T180517.json  sonic_feature_ablation_20251215_030701.json  sonic_feature_ablation_20251215_030707.json  sonic_feature_ablation_20251215_030714.json  sonic_feature_ablation_20251215_030724.json  sonic_feature_ablation_20251215_153857.json  sonic_feature_ablation_20251215_203305.json  sonic_feature_schema_20251215_185144.json  sonic_feature_schema_20251215_191132.json  sonic_feature_schema_20251215_191250.json  sonic_feature_schema_20251215_191315.json  (+92 more)
discogs-genre-test/: discogs_genre_probe.py
docs/: AI_GENRE_ENRICHMENT.md  AI_GENRE_ENRICHMENT_DEVELOPMENT_BIBLE.md  ANCHOR_PLAYLIST.md  API_REFERENCE.md  ARCHITECTURE.md  BEAM_CONTRACT.md  BEAT3TOWER_PRODUCTION.md  CANDIDATE_FILTERING_BACKLOG.md  CHANGELOG.md  CHANGELOG_Phase2.md  CHANGELOG_v3.4.md  CLEANUP_LIST.md  CONFIG.md  CORRIDOR_FEATURE_PRESERVATION_CONTRACT.md  DEAD_CODE_AUDIT_2026-06-10.md  DEPRECATION_GUIDE.md  DESIGN_RATIONALE.md  DISCOGS_INTEGRATION.md  DJ_BRIDGE_ARCHITECTURE.md  DOCUMENTATION_UPDATE_2026-01-02.md  DURATION_SUPPORT.md  FEATURE_FLAG_MIGRATION_PLAN.md  FEATURE_GLOSSARY.md  GENRE_DATA_QUALITY_FINDINGS_2026-06-12.md  GENRE_REDESIGN_HANDOFF_2026-06-16.md  GENRE_RESOURCES_AND_CLAUDE_ADJUDICATION_ROADMAP_2026-06-15.md  GENRE_SIMILARITY_METHODS.md  GENRE_SIMILARITY_SYSTEM.md  GENRE_SOFT_METRIC_FINDINGS_2026-06-26.md  GENRE_STEERING_TWO_SYSTEM_REBUILD_FINDINGS_2026-06-16.md  GOLDEN_COMMANDS.md  HANDOFF_2026-06-25_sonic_to_genre.md  HANDOFF_2026-06-26_taxonomy_term_adjudication.md  HANDOFF_2026-06-30_muq_collapse_merge.md  HANDOFF_2026-07-02_tag_steering_tuning_recipe.md  INTEGRATION_COMPLETE.md  LAYERED_GENRE_FIXTURE_DIAGNOSIS.md  LAYERED_GENRE_GRAPH_AI_HANDOFF.md  LAYERED_GENRE_GRAPH_SPEC.md  LAYERED_GENRE_TAXONOMY_IMPORT_HARDENING.md  (+47 more)
scripts/: README.md  ab_playlist_sonic_variants.py  ai_genre_enrich.py  analyze_library.py  backfill_duration.py  batch_eval_sonic_variant.py  build_beat3tower_artifacts.py  build_genre_embedding.py  build_graph_genre_similarity.py  build_wheel.py  build_windows.ps1  calibrate_genre_arc.py  calibrate_mert_transform.py  check_duration_health.py  check_specific_tracks.py  consolidate_enrichment_dbs.py  debug_edge_scores.py  diagnose_artist_style.py  diagnose_candidate_scores.py  diagnose_recency_filter.py  diagnose_sonic_dim_dominance.py  diagnose_sonic_floor.py  diagnose_sonic_geometry.py  ess_sidecar_common.py  extract_energy_sidecar.py  extract_harmony_2dftm_sidecar.py  extract_instrumental_sidecar.py  extract_mert_sidecar.py  fetch_mbids_musicbrainz.py  fix_compound_genres.py  fix_indie_genre_mappings.py  fold_2dftm_into_artifact.py  fold_mert_into_artifact.py  fold_muq_into_artifact.py  force_bind_test.py  genre_audition_analyze.py  genre_audition_build.py  genre_audition_page.html  genre_audition_serve.py  growth_candidate_report.py  (+52 more)
src/: __init__.py  artist_cache.py  artist_key_db.py  artist_utils.py  blacklist_db.py  cancellation.py  config_loader.py  console_output.py  db_backup.py  feature_flags.py  genre_cache.py  genre_normalization.py  genre_similarity.py  genre_similarity_v2.py  hybrid_sonic_analyzer.py  lastfm_client.py  librosa_analyzer.py  local_library_client.py  logging_config.py  logging_utils.py  m3u_exporter.py  metadata_client.py  multi_source_genre_fetcher.py  openai_client.py  performance_tracker.py  playlist_generator.py  plex_exporter.py  rate_limiter.py  retry_helper.py  similarity_calculator.py  string_utils.py  title_dedupe.py  track_matcher.py
tests/: conftest.py  conftest_playlist_generator.py  test_analyze_library_cli.py  test_artist_style.py  test_beat3tower_fallback.py  test_beat3tower_slim.py  test_bounded_buffer.py  test_candidate_filters.py  test_copy_db_safe.py  test_create_satellite.py  test_redaction.py  (+32 more)
(+3246 files in other folders)
