[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-generator"
version = "3.5.0"
description = "Local music library playlist generator with Beat3Tower sonic embeddings, DJ Bridge multi-seed pier playlists, and a PySide6 GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core numerics / IO
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
    "platformdirs>=3.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "mutagen>=1.47.0",
    # ML / data
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    # HTTP clients (Last.fm, MusicBrainz, Discogs, Plex)
    "requests>=2.31.0",
    # Playlist ordering
    "python-tsp>=0.4.0",
    # Configuration
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.10",
    "pre-commit>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "smoke: minimal end-to-end check, fast and broadly covering",
    "integration: exercises multiple modules with real data fixtures",
    "golden: compares against checked-in golden output files",
    "gui: requires a Qt application context (use the qtbot fixture)",
    "slow: takes more than a few seconds; skip in fast feedback loops",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]
