[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-generator"
version = "3.5.0"
description = "Local music library playlist generator with Beat3Tower sonic embeddings, DJ Bridge multi-seed pier playlists, and a PySide6 GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core numerics / IO
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
    "platformdirs>=3.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "mutagen>=1.47.0",
    # ML / data
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    # HTTP clients (Last.fm, MusicBrainz, Discogs, Plex)
    "requests>=2.31.0",
    # Playlist ordering
    "python-tsp>=0.4.0",
    # Configuration
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.10",
    "pre-commit>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "scripts/oneoffs",
    "data",
    "docs/archive",
    "docs/run_audits",
]

[tool.ruff.lint]
# Default rule set is pycodestyle errors (E) + pyflakes (F). We start
# narrow on purpose — Tier-1.1 is about gating regressions on a clean
# baseline, not chasing style across 36k LOC. Future tiers can opt in to
# pyupgrade (UP), bugbear (B), naming (N), etc.
select = ["E", "F"]

# These are intentional or pre-existing patterns where the warning isn't
# worth chasing right now. Each can be revisited piecemeal.
extend-ignore = [
    # Line length: enforced by `ruff format` if/when we adopt it. Lots of
    # legitimately long lines exist (config dicts, log strings, SQL). Not
    # gating CI on this initially.
    "E501",
    # 24 sites: `x = expr` where x is never read. Most are stale debug
    # rigging (`before = len(...)`). Removing them via --unsafe-fixes
    # produces bare expressions; cleanup deserves a dedicated pass.
    "F841",
    # One site: a deliberate late import to break a circular dep.
    "E402",
    # One site: `lambda` assigned to a name as a slot/handler. Stylistic.
    "E731",
    # One site: a single-letter loop variable matching numpy convention.
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use names like `_` and assertion patterns ruff isn't tuned for.
"tests/**" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "smoke: minimal end-to-end check, fast and broadly covering",
    "integration: exercises multiple modules with real data fixtures",
    "golden: compares against checked-in golden output files",
    "gui: requires a Qt application context (use the qtbot fixture)",
    "slow: takes more than a few seconds; skip in fast feedback loops",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]
