[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mixarc"
version = "0.1.0"
description = "Local playlist generator: MuQ-MuLan sonic embedding + genre-graph fusion over your own library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core numerics / IO
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
    "platformdirs>=3.0",
    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "mutagen>=1.47.0",
    # ML / data
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    # HTTP clients (Last.fm, MusicBrainz, Discogs, Plex)
    "requests>=2.31.0",
    # Playlist ordering
    "python-tsp>=0.4.0",
    # Configuration
    "python-dotenv>=1.0.0",
]
license = {file = "LICENSE"}
authors = [{name = "Dylan von Schwab", email = "vonschwab@gmail.com"}]
keywords = ["playlist", "music", "dj", "similarity", "muq", "genre", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/vonschwab/mixarc"
Repository = "https://github.com/vonschwab/mixarc"
Issues = "https://github.com/vonschwab/mixarc/issues"

[project.optional-dependencies]
ai = [
    "openai>=1.68.0",
    "claude-agent-sdk>=0.1.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "httpx>=0.24.0",
    "ruamel.yaml>=0.18",
]
muq = [
    "muq",
    "torch",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "build>=1.0",
]

[project.scripts]
mixarc = "src.mixarc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.playlist_web" = ["static_dist/**/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "scripts/oneoffs",
    "data",
    "docs/archive",
    "docs/run_audits",
]

[tool.ruff.lint]
# Default rule set is pycodestyle errors (E) + pyflakes (F). We start
# narrow on purpose — Tier-1.1 is about gating regressions on a clean
# baseline, not chasing style across 36k LOC. Future tiers can opt in to
# pyupgrade (UP), bugbear (B), naming (N), etc.
select = ["E", "F"]

# These are intentional or pre-existing patterns where the warning isn't
# worth chasing right now. Each can be revisited piecemeal.
extend-ignore = [
    # Line length: enforced by `ruff format` if/when we adopt it. Lots of
    # legitimately long lines exist (config dicts, log strings, SQL). Not
    # gating CI on this initially.
    "E501",
    # 24 sites: `x = expr` where x is never read. Most are stale debug
    # rigging (`before = len(...)`). Removing them via --unsafe-fixes
    # produces bare expressions; cleanup deserves a dedicated pass.
    "F841",
    # One site: a deliberate late import to break a circular dep.
    "E402",
    # One site: `lambda` assigned to a name as a slot/handler. Stylistic.
    "E731",
    # One site: a single-letter loop variable matching numpy convention.
    "E741",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use names like `_` and assertion patterns ruff isn't tuned for.
"tests/**" = ["F841"]
# Research/eval scripts (kin to scripts/oneoffs) use compact one-off multi-statement
# lines (`a = x; b = y`) that aren't worth splitting; still linted for F (dead code).
"scripts/research/**" = ["E701", "E702"]

[tool.mypy]
# Allowlist policy: by default the codebase is too dense in untyped
# legacy code for mypy to be useful project-wide. Tier-1.1 turns mypy on
# only for modules that are already well-typed; new typed modules
# graduate into the allowlist below as they prove clean.
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true

# Default: silence errors across all of src.*. Specific modules opt
# back in via the allowlist override below.
[[tool.mypy.overrides]]
module = "src.*"
ignore_errors = true

# Allowlist: modules where mypy errors fail the build. Keep this list
# growing one PR at a time as legacy code is typed.
[[tool.mypy.overrides]]
module = [
    "src.cancellation",
    "src.genre_cache",
]
ignore_errors = false
check_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "smoke: minimal end-to-end check, fast and broadly covering",
    "integration: exercises multiple modules with real data fixtures",
    "golden: compares against checked-in golden output files",
    "slow: takes more than a few seconds; skip in fast feedback loops",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
]
